added bootstrap script

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   };
   firebase.initializeApp(config);
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.5/css/mdb.min.css"></script>
 <script src="crypto.js"></script>
 <body>
     <p id="price">
