CSS is working more?

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
   };
   firebase.initializeApp(config);
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.5/css/mdb.min.css"></script>
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.5/css/mdb.min.css"></link>
+
 <script src="crypto.js"></script>
 
 <nav class="navbar navbar-inverse">
